fix(hero-section): enhance images display on smaller screens

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -41,13 +41,18 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.2); /* Light blur effect */
+  background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(2px);
   transition: opacity 0.5s ease;
 }
 
-.loading {
-  filter: blur(8px);
+.imageLoading {
+  filter: blur(3px);
+  transition: filter 0.5s ease-in-out;
+}
+
+.heroLoading {
+  filter: blur(2px);
   transition: filter 0.5s ease-in-out;
 }
 
